--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import './css/variables.css';
+@import './css/fonts.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0
+}
+
+button {
+  cursor: pointer;
 }
