--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,20 @@
 
 .header {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  max-width: 482px;
-  margin: 0 auto;
+  
+  max-width: 602px;
+  
+}
+
+@media screen and (min-width: 498px) {
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
 }
 
 .logo {
@@ -27,7 +37,7 @@
   font-size: 19px;
   font-weight: 700;
   color: var(--brand-color);
-  margin-top: 80px;
+  margin-top: 136px;
 }
 
 .heading-part {
