--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -5,15 +5,14 @@
 
 .input {
     box-sizing: border-box;
-    height: 20px;
-    width: 100px;
+    height: 26px;
+    width: 124px;
     padding: 0 8px;
     font-family: 'Arial', sans-serif;
-    font-size: 8px;
+    font-size: 10px;
     color: var(--secondary-text-color);
     border: none;
     border-radius: 2px;
-    outline: none;
 }
 
 .input:not(:last-child) {
@@ -21,27 +20,27 @@
 }
 
 .errorMsg, .link {
-    margin-top: 2px;
+    margin-top: 4px;
     position: absolute;
     font-family: 'Arial', sans-serif;
-    font-size: 5px;
+    font-size: 8px;
     color: #ffffff;
 }
 
 .errorMsg {
-    width: 100px;
-    height: 18px;
+    width: 124px;
+    height: 20px;
     padding: 6px;
     margin-right: 8px;
     box-sizing: border-box;
     border-radius: 2px;
     background-color: var(--error-color);
-    
+    text-align: center;
 }
 
 .link {
     padding: 5px 0;
-    left: 108px;
+    left: 132px;
 }
 
 .wrapper {
@@ -50,17 +49,18 @@
 }
 
 .button {
-    width: 40px;
-    height: 20px;
+    width: 50px;
+    height: 26px;
+    padding: 0;
     background-color: transparent;
     font-family: 'Arial', sans-serif;
     font-size: 8px;
     color: #ffffff;
     border: 1px solid #ffffff;
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
-.button:hover {
+.button:hover, .button:focus {
     background-image: var(--login-btn-active-gradient);
     border: none;
 }
@@ -72,6 +72,6 @@
     transition: box-shadow 230ms linear;
 }
 
-.submitBtn:hover {
+.submitBtn:hover, .submitBtn:focus {
     box-shadow: 0px 1px 8.5px var(--login-btn-hover);
 }
