--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -32,6 +32,10 @@
     background-image: var(--next-btn-gradient);
 }
 
+.button.startBtn {
+    background-image: var(--start-btn-gradient);
+}
+
 .prevBtnIcon, .nextBtnIcon, .startBtnIcon {
     box-sizing: border-box;
     display: inline-block;
@@ -81,7 +85,7 @@
     box-shadow: 0px 1px 8.5px var(--start-btn-hover);
 }
 
-@media screen and (min-width: 498px) {
+@media screen and (min-width: 532px) {
     .button:last-child {
         height: 26px;
         width: 90px;
